src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Account_Contact__c</fullName>
        <formula>Account.Name &amp;&quot; - &quot;&amp; Full_Name__c</formula>
        <label>Account - Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <formula>Account.OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_Last_30_days__c</fullName>
        <formula>and( ISNUll(Days_w_o_Activity__c),Days_w_o_Activity__c &lt;=30)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active Last 30 days</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Active_Last_7_days__c</fullName>
        <formula>and( ISNUll(Days_w_o_Activity__c),Days_w_o_Activity__c &lt;=7)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active Last 7 days</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Became_a_Customer_Date__c</fullName>
        <label>Became a Customer Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Became_a_Lead_Date__c</fullName>
        <label>Became a Lead Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Became_a_MQL_Date__c</fullName>
        <label>Became a MQL Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Became_a_Sales_Qualified_Lead_Date__c</fullName>
        <label>Became a Sales Qualified Lead Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Became_a_Subscriber_Date__c</fullName>
        <label>Became a Subscriber Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Became_an_Opportunity_Date__c</fullName>
        <label>Became an Opportunity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Calculated_Lead_Source__c</fullName>
        <formula>IF(BEGINS (Text(LeadSource),&quot;Outbound&quot;), &apos;Outbound&apos;, IF(CONTAINS(Text(LeadSource),&quot;Referred by Dimagi staff&quot;),&apos;Dimagi referral&apos;, if(CONTAINS (Text(LeadSource), &quot;Referred by Another Org&quot;),&apos;Inbound - External referral&apos;,if(CONTAINS (Text(LeadSource), &quot;Referred within same Org&quot;),&apos;Inbound - External referral&apos;, if(BEGINS(Text(LeadSource),&quot;Inbound&quot;), &apos;Inbound&apos;, IF(OR(Hubspot_Create_Date__c    &lt;  CreatedDate,Hubspot_Create_Date__c    =  CreatedDate),&apos;Inbound&apos;, if (Hubspot_Create_Date__c    &gt;  CreatedDate,&apos;Outbound&apos;,if(ISBLANK(Hubspot_Create_Date__c),&apos;Outbound&apos;,&apos;Other&apos;))))))))</formula>
        <label>Calculated Lead Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_Object__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>City</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Value does not exist or does not match filter criteria for the country you selected.</errorMessage>
            <filterItems>
                <field>City__c.Country__c</field>
                <operation>equals</operation>
                <valueField>$Source.Country__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>City__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City (old)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Abidjan</fullName>
                </value>
                <value>
                    <fullName>Abu Dhabi</fullName>
                </value>
                <value>
                    <fullName>Abuja</fullName>
                </value>
                <value>
                    <fullName>Accra</fullName>
                </value>
                <value>
                    <fullName>Adamstown</fullName>
                </value>
                <value>
                    <fullName>Addis Ababa</fullName>
                </value>
                <value>
                    <fullName>Adorra la Vella</fullName>
                </value>
                <value>
                    <fullName>Algiers</fullName>
                </value>
                <value>
                    <fullName>Alofi</fullName>
                </value>
                <value>
                    <fullName>Amman</fullName>
                </value>
                <value>
                    <fullName>Amsterdam</fullName>
                </value>
                <value>
                    <fullName>Ankara</fullName>
                </value>
                <value>
                    <fullName>Antananarivo</fullName>
                </value>
                <value>
                    <fullName>Antigua, Guatemala</fullName>
                </value>
                <value>
                    <fullName>Apia</fullName>
                </value>
                <value>
                    <fullName>Ashgabat</fullName>
                </value>
                <value>
                    <fullName>Asmara</fullName>
                </value>
                <value>
                    <fullName>Astana</fullName>
                </value>
                <value>
                    <fullName>Asuncion</fullName>
                </value>
                <value>
                    <fullName>Athens</fullName>
                </value>
                <value>
                    <fullName>Atlanta</fullName>
                </value>
                <value>
                    <fullName>Austin</fullName>
                </value>
                <value>
                    <fullName>Avarua</fullName>
                </value>
                <value>
                    <fullName>Baghdad</fullName>
                </value>
                <value>
                    <fullName>Baku</fullName>
                </value>
                <value>
                    <fullName>Baltimore</fullName>
                </value>
                <value>
                    <fullName>Bamako</fullName>
                </value>
                <value>
                    <fullName>Bandar Seri Begawan</fullName>
                </value>
                <value>
                    <fullName>Bangkok</fullName>
                </value>
                <value>
                    <fullName>Bangui</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CloudingoAgent__CES__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Contact Email Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__MAR__c</fullName>
        <label>Mailing Address Record Type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__MAS__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Mailing Address Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__MAV__c</fullName>
        <label>Mailing Address Vacancy</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__MRDI__c</fullName>
        <label>Mailing Residential Delivery Indicator</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__MTZ__c</fullName>
        <label>Mailing Timezone</label>
        <length>48</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__OAR__c</fullName>
        <label>Other Address Record Type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__OAS__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Other Address Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__OAV__c</fullName>
        <label>Other Address Vacancy</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__ORDI__c</fullName>
        <label>Other Residential Delivery Indicator</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__OTZ__c</fullName>
        <label>Other Timezone</label>
        <length>48</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Source_Reason__c</fullName>
        <description>This field clarifies the referral source with a dependent picklist.</description>
        <inlineHelpText>Choose the type of referral that best fits the contact.</inlineHelpText>
        <label>Contact Source Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Internal referral (within the same organization)</fullName>
                </value>
                <value>
                    <fullName>External referral (to a different organization)</fullName>
                </value>
                <value>
                    <fullName>Dimagi referral (someone from Dimagi referred this lead)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Status_Reason__c</fullName>
        <description>This field contains the list of reasons for selecting the contact status.</description>
        <inlineHelpText>Choose a reason that helps clarify the contact status.</inlineHelpText>
        <label>Contact Status Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Recruiting / Hiring</fullName>
                </value>
                <value>
                    <fullName>Stopped responding</fullName>
                </value>
                <value>
                    <fullName>Timeline &gt; 6 months out</fullName>
                </value>
                <value>
                    <fullName>Existing client / project</fullName>
                </value>
                <value>
                    <fullName>No response</fullName>
                </value>
                <value>
                    <fullName>Email opt-out</fullName>
                </value>
                <value>
                    <fullName>Spam</fullName>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                </value>
                <value>
                    <fullName>Partner program</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Counter_Formula__c</fullName>
        <description>This is a simple count formula to be able to summarize unique objects in reports.</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Unique Contacts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_1st_Next_activity_date_set_for_opps__c</fullName>
        <description>Field automatically filled in by Hubspot. Date of First &quot;Next activity date&quot; known, after the contact became an opps, i.e first day at which the follow-up call is scheduled</description>
        <inlineHelpText>Field automatically filled in by Hubspot. Date of First &quot;Next activity date&quot; known, after the contact became an opps, i.e first day at which the follow-up call is scheduled</inlineHelpText>
        <label>Date 1st Next activity date set for opps</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_of_1st_Sales_outbound_outreach__c</fullName>
        <description>First date at which the Inside Sales team reaches out to this contact as part of outbound outreach (ABS)</description>
        <inlineHelpText>First date at which the Inside Sales team reaches out to this contact as part of outbound outreach (ABS)</inlineHelpText>
        <label>Date of 1st Sales outbound outreach</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_w_o_Activity__c</fullName>
        <description>Returns the # of days since last activity on Contact</description>
        <formula>TODAY() - LastActivityDate</formula>
        <label>Days w/o Activity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Department_Bucket__c</fullName>
        <description>Created by Gillian - ask if you have questions</description>
        <label>Department Bucket</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Academia</fullName>
                </value>
                <value>
                    <fullName>Evaluation (M&amp;E / MEAL / MERL)</fullName>
                </value>
                <value>
                    <fullName>ICT / IT / Technical</fullName>
                </value>
                <value>
                    <fullName>Logistics / Supply Chain</fullName>
                </value>
                <value>
                    <fullName>Management</fullName>
                </value>
                <value>
                    <fullName>Medical</fullName>
                </value>
                <value>
                    <fullName>Operations / Biz Dev</fullName>
                </value>
                <value>
                    <fullName>Procurement / Finance</fullName>
                </value>
                <value>
                    <fullName>Programmatic / Projects</fullName>
                </value>
                <value>
                    <fullName>Regional</fullName>
                </value>
                <value>
                    <fullName>Research / Data</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dummy_sort__c</fullName>
        <defaultValue>1</defaultValue>
        <description>used to sort records behind the scenes</description>
        <label>Dummy sort</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email_Salutation__c</fullName>
        <formula>BLANKVALUE( FirstName , TEXT(Salutation) &amp; &apos; &apos; &amp; LastName )</formula>
        <label>Email Salutation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Template_Body__c</fullName>
        <inlineHelpText>You can reference this field as the body, or a portion of the body, of a Mass Email. Typically this might be a personal note at the top of a generic mass email.   All fields on this record can be referenced in mass emails as well.</inlineHelpText>
        <label>Email Template Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email_Template_Subject__c</fullName>
        <inlineHelpText>You can reference this field as the subject line (or a portion of a subject line) of a Mass Email. All fields on this record can be referenced in mass emails as well.</inlineHelpText>
        <label>Email Template Subject</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Follow_up_Date__c</fullName>
        <inlineHelpText>Use this to set a specific date you&apos;d like the follow-up report to remind you to reach back out.</inlineHelpText>
        <label>Follow-up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>FirstName + &apos; &apos; + LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HS_Became_a_Sales_Qualified_Lead_Date__c</fullName>
        <label>HS -Became a Sales Qualified Lead Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HubSpot_A_B_Variable_Deploy__c</fullName>
        <label>HubSpot - A/B Variable Deploy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HubSpot_Attended_event_Meetup__c</fullName>
        <label>HubSpot - Attended event [Meetup]</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HubSpot_Attended_event_Webinar__c</fullName>
        <label>HubSpot - Attended event [Webinar]</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HubSpot_Attended_event_Workshop__c</fullName>
        <label>HubSpot - Attended event [Workshop]</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HubSpot_Blog_Subscriber__c</fullName>
        <label>HubSpot - Blog Subscriber</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HubSpot_Confirmed_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HubSpot - Confirmed Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HubSpot_Connected_via_Phone_Phone_Test__c</fullName>
        <description>Did we connect on the phone? Yes or no.</description>
        <inlineHelpText>Did we connect on the phone? Yes or no.</inlineHelpText>
        <label>HubSpot - Connected via Phone-Phone Te</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Yes - but need to call back</fullName>
                </value>
                <value>
                    <fullName>Yes - but preferred email communication</fullName>
                </value>
                <value>
                    <fullName>Yes - but no longer considering CommCare</fullName>
                </value>
                <value>
                    <fullName>Yes - asked to talk via Skype</fullName>
                </value>
                <value>
                    <fullName>Yes - but did not want to hear from us</fullName>
                </value>
                <value>
                    <fullName>Yes - but didn&apos;t speak same language</fullName>
                </value>
                <value>
                    <fullName>Yes - part of existing project</fullName>
                </value>
                <value>
                    <fullName>Yes - but just exploring</fullName>
                </value>
                <value>
                    <fullName>Yes - but careers</fullName>
                </value>
                <value>
                    <fullName>No - good number, but couldn&apos;t reach after 6 tries</fullName>
                </value>
                <value>
                    <fullName>No - bad number</fullName>
                </value>
                <value>
                    <fullName>No - timezone was too hard to connect</fullName>
                </value>
                <value>
                    <fullName>No - talking to co-worker or existing relationship</fullName>
                </value>
                <value>
                    <fullName>No - became ineligible or didn&apos;t mark</fullName>
                </value>
                <value>
                    <fullName>No - Dimagi Employee or Internal Test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HubSpot_Date_Created_in_CCHQ__c</fullName>
        <label>HubSpot - Date Created in CCHQ</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HubSpot_Date_of_HQ_Sign_up_new__c</fullName>
        <label>HubSpot - Date of HQ Sign-up (new)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HubSpot_Date_of_Proactive_Call__c</fullName>
        <label>HubSpot - Date of Proactive Call</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HubSpot_Date_of_blog_subscription__c</fullName>
        <label>HubSpot - Date of blog subscription</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HubSpot_Date_of_first_Click_Deploy__c</fullName>
        <label>HubSpot -Date of first &quot;Click Deploy&quot;</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HubSpot_Date_of_first_HQ_form_submissi__c</fullName>
        <label>HubSpot - Date of first HQ form submissi</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HubSpot_Date_of_first_blog_visit__c</fullName>
        <label>HubSpot - Date of first blog visit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HubSpot_Date_of_first_time_reaching_10__c</fullName>
        <description>HubSpot - Date of first time reaching 10 HQ forms</description>
        <inlineHelpText>HubSpot - Date of first time reaching 10 HQ forms</inlineHelpText>
        <label>HubSpot - Date reaching 10 HQ forms</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HubSpot_Date_of_inv_accepted_new_user__c</fullName>
        <label>HubSpot - Date of inv accepted(new user)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HubSpot_Date_of_most_recent_HQ_activit__c</fullName>
        <description>HubSpot - Date of most recent HQ activity (form builder, click deploy or new project)</description>
        <inlineHelpText>HubSpot - Date of most recent HQ activity (form builder, click deploy or new project)</inlineHelpText>
        <label>HubSpot - Date of most recent HQ activit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HubSpot_Date_reaching_100_HQ_forms__c</fullName>
        <description>HubSpot - Date of first time reaching 100 HQ form</description>
        <inlineHelpText>HubSpot - Date of first time reaching 100 HQ form</inlineHelpText>
        <label>HubSpot - Date reaching 100 HQ forms</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HubSpot_Date_reaching_300_HQ_forms__c</fullName>
        <description>HubSpot - Date of first time reaching 300 HQ forms</description>
        <inlineHelpText>HubSpot - Date of first time reaching 300 HQ forms</inlineHelpText>
        <label>HubSpot - Date reaching 300 HQ forms</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HubSpot_Date_reaching_50_HQ_forms__c</fullName>
        <description>HubSpot - Date of first time reaching 50 HQ forms</description>
        <inlineHelpText>HubSpot - Date of first time reaching 50 HQ forms</inlineHelpText>
        <label>HubSpot - Date reaching 50 HQ forms</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HubSpot_Default_HubSpot_Blog_Email_Sub__c</fullName>
        <label>HubSpot - Default HubSpot Blog Email Sub</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>instant</fullName>
                </value>
                <value>
                    <fullName>daily</fullName>
                </value>
                <value>
                    <fullName>weekly</fullName>
                </value>
                <value>
                    <fullName>monthly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HubSpot_Eligible_for_a_proactive_call__c</fullName>
        <label>HubSpot - Eligible for a proactive call</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HubSpot_Email_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HubSpot - Email Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HubSpot_Email_Subscriptions__c</fullName>
        <label>HubSpot - Email Subscriptions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Webinars</fullName>
                </value>
                <value>
                    <fullName>Blog Updates</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HubSpot_Email_is_generic__c</fullName>
        <defaultValue>false</defaultValue>
        <description>&quot;Yes&quot; means a generic email address like Hotmail, yahoo, gmail, etc. 

&quot;No&quot; means a non-generic email address, as far as we can tell.</description>
        <inlineHelpText>&quot;Yes&quot; means a generic email address like Hotmail, yahoo, gmail, etc. 

&quot;No&quot; means a non-generic email address, as far as we can tell.</inlineHelpText>
        <label>HubSpot - Email is generic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HubSpot_Emails_Bounced__c</fullName>
        <description>The number of marketing emails that bounced for the current email address.</description>
        <inlineHelpText>The number of marketing emails that bounced for the current email address.</inlineHelpText>
        <label>HubSpot - Emails Bounced</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HubSpot_Emails_Clicked__c</fullName>
        <description>The number of marketing emails which have had link clicks for the current email address.</description>
        <inlineHelpText>The number of marketing emails which have had link clicks for the current email address.</inlineHelpText>
        <label>HubSpot - Emails Clicked</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HubSpot_Emails_Opened__c</fullName>
        <description>The number of marketing emails opened for the current email address.</description>
        <inlineHelpText>The number of marketing emails opened for the current email address.</inlineHelpText>
        <label>HubSpot - Emails Opened</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HubSpot_Had_a_proactive_call__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HubSpot - Had a proactive call?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HubSpot_India_Date_Created_in_CCHQ__c</fullName>
        <label>HubSpot - India Date Created in CCHQ</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HubSpot_Last_Contacted__c</fullName>
        <label>HubSpot - Last Contacted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HubSpot_Number_of_project_spaces__c</fullName>
        <label>HubSpot - Number of project spaces</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HubSpot_Opt_Into_Emails__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Did the user select: Opt into emails about new features and other CommCare updates.</description>
        <inlineHelpText>Did the user select: Opt into emails about new features and other CommCare updates.</inlineHelpText>
        <label>HubSpot - Opt Into Emails</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HubSpot_Persona__c</fullName>
        <description>A contact&apos;s persona</description>
        <inlineHelpText>A contact&apos;s persona</inlineHelpText>
        <label>HubSpot - Persona</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>persona_1</fullName>
                </value>
                <value>
                    <fullName>persona_3</fullName>
                </value>
                <value>
                    <fullName>persona_5</fullName>
                </value>
                <value>
                    <fullName>persona_6</fullName>
                </value>
                <value>
                    <fullName>persona_8</fullName>
                </value>
                <value>
                    <fullName>persona_9</fullName>
                </value>
                <value>
                    <fullName>persona_10</fullName>
                </value>
                <value>
                    <fullName>persona_11</fullName>
                </value>
                <value>
                    <fullName>persona_12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HubSpot_Recent_Conversion_Date__c</fullName>
        <description>The date this contact last submitted a form</description>
        <inlineHelpText>The date this contact last submitted a form</inlineHelpText>
        <label>HubSpot - Recent Conversion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HubSpot_Sends_Since_Last_Engagement__c</fullName>
        <label>HubSpot - Sends Since Last Engagement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HubSpot_UTM_Campaign__c</fullName>
        <label>HubSpot - UTM_Campaign</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HubSpot_of_times_called_Phone_Test__c</fullName>
        <label>HubSpot - # of times called - Phone Test</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hubspot_Create_Date__c</fullName>
        <description>The date that a contact entered the system</description>
        <inlineHelpText>The date that a contact entered the system</inlineHelpText>
        <label>Hubspot - Create Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Hubspot_Date_of_last_HQ_login__c</fullName>
        <description>Date of last login to CCHQ</description>
        <inlineHelpText>Date of last login to CCHQ</inlineHelpText>
        <label>Hubspot - Date of last HQ login</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hubspot_First_Conversion_Clustered__c</fullName>
        <description>Automatically filled in by Hubspot. Indicates the type of Hubspot form the contact first submitted to become a Hubspot lead. These type of forms got clustered into big bucket by the marketing team (Note: there are sometimes a few mistakes in the classification but it is 90% accurate and gets updated correctly every month)</description>
        <inlineHelpText>Automatically filled by Hubspot. Indicates the type of Hubspot form the contact first submitted to become a HS lead. These forms got clustered into big bucket  (Note: there are sometimes a few mistakes in the classification, which is solved every month</inlineHelpText>
        <label>Hubspot - First Conversion [Clustered]</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hubspot_First_conversion__c</fullName>
        <description>Field automatically populated by Hubspot. Indicates the first Hubspot form submitted by this contact to become a Hubspot inbound lead</description>
        <inlineHelpText>Field automatically populated by Hubspot. Indicates the first Hubspot form submitted by this contact to become a Hubspot inbound lead</inlineHelpText>
        <label>Hubspot -First conversion</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>